[gd_scene load_steps=47 format=2]

[ext_resource path="res://Player_Textures/Warrior_SheetnoEffect.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://ShakeCamera2D.gd" type="Script" id=3]
[ext_resource path="res://Player_Textures/Sword.png" type="Texture" id=4]
[ext_resource path="res://Player_Textures/Dark_Sword.png" type="Texture" id=5]
[ext_resource path="res://Player_Textures/empty.png" type="Texture" id=6]
[ext_resource path="res://hurtbox.gd" type="Script" id=7]
[ext_resource path="res://Player_Textures/dark_iron_armor.png" type="Texture" id=8]
[ext_resource path="res://Player_Textures/crystal_armor.png" type="Texture" id=9]
[ext_resource path="res://Player_Textures/punk_outfit.png" type="Texture" id=10]
[ext_resource path="res://Player_Textures/fabric_clothing.png" type="Texture" id=11]
[ext_resource path="res://Player_Textures/ninja.png" type="Texture" id=12]
[ext_resource path="res://Player_Textures/stone_armor.png" type="Texture" id=13]
[ext_resource path="res://Player_Textures/gold_sword.png" type="Texture" id=14]
[ext_resource path="res://Player_Textures/crystal_sword.png" type="Texture" id=15]
[ext_resource path="res://Player_Textures/wooden_sword.png" type="Texture" id=16]
[ext_resource path="res://UI/code/Base_Sprite.gd" type="Script" id=17]
[ext_resource path="res://Player_Textures/17_felspell_spritesheet.png" type="Texture" id=18]
[ext_resource path="res://Player_Textures/katana.png" type="Texture" id=19]
[ext_resource path="res://Player_Textures/samurai_suit.png" type="Texture" id=20]
[ext_resource path="res://Player_Textures/mantis_armor.png" type="Texture" id=21]
[ext_resource path="res://Player_Textures/Ghost_Armor.png" type="Texture" id=22]
[ext_resource path="res://Player_Textures/machine_armor.png" type="Texture" id=23]
[ext_resource path="res://Player_Textures/gobline_armor.png" type="Texture" id=24]
[ext_resource path="res://Player_Textures/mantis_scimitar.png" type="Texture" id=25]
[ext_resource path="res://Player_Textures/goblin_dagger.png" type="Texture" id=26]
[ext_resource path="res://Player_Textures/rapier_of_ice.png" type="Texture" id=27]
[ext_resource path="res://Player_Textures/platinum_armor.png" type="Texture" id=28]
[ext_resource path="res://Player_Textures/red_saber.png" type="Texture" id=29]
[ext_resource path="res://Player_Textures/bone_armor.png" type="Texture" id=30]
[ext_resource path="res://Player_Textures/divine_armor.png" type="Texture" id=31]
[ext_resource path="res://Player_Textures/golem.png" type="Texture" id=32]
[ext_resource path="res://Player_Textures/blade_of_blood.png" type="Texture" id=33]

[sub_resource type="CapsuleShape2D" id=1]
height = 15.4802

[sub_resource type="CapsuleShape2D" id=2]
height = 16.3516

[sub_resource type="Animation" id=3]
resource_name = "Attack_1"
length = 0.9
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.37, 0.44, 0.51, 0.58, 0.65, 0.72, 0.79 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Base_Sprite/Iron_Sword:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=4]
resource_name = "Dash_Attack"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83, 84, 85 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Falling"
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 47 ]
}

[sub_resource type="Animation" id=6]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 41 ]
}

[sub_resource type="Animation" id=8]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Start_Dash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 69, 70, 71 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Stop_Dash"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Base_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 73, 74, 75 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Enter_Menu"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("ingame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -55 ), Vector2( 100, -55 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ingame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -55 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "heal"
length = 1.5
step = 0.015
tracks/0/type = "value"
tracks/0/path = NodePath("Heal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.015, 0.03, 0.045, 0.06, 0.075, 0.09, 0.105, 0.12, 0.135, 0.15, 0.165, 0.18, 0.195, 0.21, 0.225, 0.24, 0.255, 0.27, 0.285, 0.3, 0.315, 0.33, 0.345, 0.36, 0.375, 0.39, 0.405, 0.42, 0.435, 0.45, 0.465, 0.48, 0.495, 0.51, 0.525, 0.54, 0.555, 0.57, 0.585, 0.6, 0.615, 0.63, 0.645, 0.66, 0.675, 0.69, 0.705, 0.72, 0.735, 0.75, 0.765, 0.78, 0.795, 0.81, 0.825, 0.84, 0.855, 0.87, 0.885, 0.9, 0.915, 0.93, 0.945, 0.96, 0.975, 0.99, 1.005, 1.02, 1.035, 1.05, 1.065, 1.08, 1.095, 1.11, 1.125, 1.14, 1.155, 1.17, 1.185, 1.2, 1.215, 1.23, 1.245, 1.26, 1.275, 1.29, 1.305, 1.32, 1.335, 1.35, 1.365 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Heal:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="hurtbox" type="Area2D" parent="."]
collision_mask = 4
script = ExtResource( 7 )

[node name="light_right" type="CollisionPolygon2D" parent="hurtbox"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 5.13236, 18.1611, 27.2324, 9.17121, 16.7442, -16.1127, 1.76117, -14.0526, -20.1516, -6.37373, -18.6533, -3.84534, 11.9684, -7.40382, 9.72092, 12.2615 )
disabled = true

[node name="light_left" type="CollisionPolygon2D" parent="hurtbox"]
visible = false
build_mode = 1
polygon = PoolVector2Array( -6.87648, 17.7104, -25.0845, 9.04836, -15.4502, -15.2585, 1.69718, -14.021, 21.9381, -5.35896, -0.424145, -8.099, -10.412, -8.27577, -7.84874, 13.0258 )
disabled = true

[node name="heavy_left" type="CollisionPolygon2D" parent="hurtbox"]
build_mode = 1
polygon = PoolVector2Array( -5.08479, 18.0165, -7.07891, 18.6195, -15.125, 26.25, -28.5417, 26.2134, -45.4687, 25.6566, -33.427, 10.0189, -17.2214, -11.8691, -3.5965, -12.7634, -16.3797, -4.22229, -24.307, 7.70388, -16.9409, 15.4208, -6.34764, 13.246 )
disabled = true

[node name="heavy_right" type="CollisionPolygon2D" parent="hurtbox"]
build_mode = 1
polygon = PoolVector2Array( 6.54038, 17.9584, 11.875, 24.625, 16.1875, 27.5625, 41.5052, 28.2179, 48.7438, 28.552, 35.3229, 9.53218, 22.3082, -10.2401, 4.08751, -12.6521, 11.5488, -8.86575, 24.8944, 6.44537, 18.1368, 16.0395, 7.70837, 13.203 )
disabled = true

[node name="Collision_Left" type="CollisionShape2D" parent="."]
position = Vector2( -6.44436, 7.7945 )
shape = SubResource( 1 )

[node name="Collision_Right" type="CollisionShape2D" parent="."]
position = Vector2( 7.17892, 7.227 )
shape = SubResource( 2 )
disabled = true

[node name="Base_Sprite" type="Sprite" parent="."]
position = Vector2( -32.3635, -17.3584 )
scale = Vector2( 0.963439, 0.990444 )
texture = ExtResource( 6 )
centered = false
hframes = 6
vframes = 17
frame = 15
script = ExtResource( 17 )

[node name="Iron_Sword" type="Sprite" parent="Base_Sprite"]
visible = false
z_index = 1
texture = ExtResource( 4 )
centered = false
hframes = 6
vframes = 17
frame = 8

[node name="Black_Sword" type="Sprite" parent="Base_Sprite"]
visible = false
z_index = 1
texture = ExtResource( 5 )
centered = false
hframes = 6
vframes = 17
frame = 15

[node name="Crystal_Sword" type="Sprite" parent="Base_Sprite"]
visible = false
z_index = 1
texture = ExtResource( 15 )
centered = false
hframes = 6
vframes = 17
frame = 15

[node name="Wooden_Sword" type="Sprite" parent="Base_Sprite"]
visible = false
z_index = 1
texture = ExtResource( 16 )
centered = false
hframes = 6
vframes = 17
frame = 15

[node name="Golden_Sword" type="Sprite" parent="Base_Sprite"]
visible = false
z_index = 1
texture = ExtResource( 14 )
centered = false
hframes = 6
vframes = 17
frame = 15

[node name="Iron_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 1 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Black_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 8 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Crystal_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 9 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Neon_Suit" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 10 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Fabric_Suit" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 11 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Ninja_Suit" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 12 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Stone_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 13 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Katana" type="Sprite" parent="Base_Sprite"]
visible = false
z_index = 1
texture = ExtResource( 19 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Mantis_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 21 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Samurai_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 20 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Ghost_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 22 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Machine_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 23 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Bone_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 30 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Goblin_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 24 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Platinum_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 28 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Golem" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 32 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Divine_Armor" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 31 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Rapier_Of_Ice" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 27 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Mantis_Scimitar" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 25 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Ruby_Sword" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 29 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Goblin_Dagger" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 26 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Blade_Of_Blood" type="Sprite" parent="Base_Sprite"]
visible = false
texture = ExtResource( 33 )
centered = false
hframes = 6
vframes = 17
frame = 80

[node name="Heal" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( -6, -0.771 )
scale = Vector2( 0.3, 0.3 )
z_index = 2
texture = ExtResource( 18 )
hframes = 10
vframes = 10
frame = 91

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_1 = SubResource( 3 )
anims/Dash_Attack = SubResource( 4 )
anims/Falling = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Jumping = SubResource( 7 )
anims/Run = SubResource( 8 )
anims/Start_Dash = SubResource( 9 )
anims/Stop_Dash = SubResource( 10 )

[node name="Effects" type="AnimationPlayer" parent="."]
anims/Enter_Menu = SubResource( 12 )
anims/RESET = SubResource( 13 )
anims/heal = SubResource( 11 )

[node name="ingame" type="Camera2D" parent="."]
position = Vector2( 0, -55 )
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
script = ExtResource( 3 )

[node name="menu" type="Camera2D" parent="."]
position = Vector2( 140, -55 )
rotating = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = -198.0
margin_top = -151.0
margin_right = -109.0
margin_bottom = -71.0
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}
